--- a/css/app.css
+++ b/css/app.css
@@ -66,13 +66,14 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY(0);
-    background: #02b3e4;
+    transform: rotateY(720deg);
+    transition: transform 1s;
     cursor: default;
 }
 
 .deck .card.show {
     font-size: 33px;
+    background: #02b3e4;
 }
 
 .deck .card.match {
