--- a/css/app.css
+++ b/css/app.css
@@ -66,8 +66,8 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY(720deg);
-    transition: transform 1s;
+    transform: rotateY(180deg);
+    transition: transform .6s;
     cursor: default;
 }
 
@@ -80,6 +80,7 @@ h1 {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+    transform: rotateY(180deg);
 }
 
 /*
